[package]
name = "hedgehog-lab-swc"
version = "0.1.0"
authors = ["akitaSummer <644171127@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
swc = "0.191.0"
swc_common = { version = "0.18.9", features = ["tty-emitter"] }
swc_ecmascript = {version = "0.166.0", features = [
  "transforms",
  "visit",
]}
once_cell = "1.10.0"
anyhow = "1.0.42"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
